fix: Running with coverage now works