@@ -25,6 +25,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
+                <configuration>
+                    <argLine>--enable-native-access=ALL-UNNAMED -Dprism.order=sw</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
@@ -32,6 +35,10 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>edu.ntnu.idi.idatt2003.millions.view.Main</mainClass>
+                    <options>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                        <option>-Dprism.order=sw</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
